관리자 프론트 완료..

--- a/src/main/resources/static/css/board.css
+++ b/src/main/resources/static/css/board.css
@@ -322,6 +322,14 @@ table td, table th {
     padding: 15px;
     border: 1px solid #e8e8e8;
 }
+
+table td:nth-child(3) {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    text-align: left;
+}
+
 table th {
     background-color: #f4f4f4;
     font-weight: bold;
@@ -348,5 +356,5 @@ input[type="text"]:focus, textarea:focus {
 .article-register-btn {
     font-size: 16px;
     margin-right: 10px;
-    
+
 }
