--- a/src/main/resources/templates/fragments/nav-admin.html
+++ b/src/main/resources/templates/fragments/nav-admin.html
@@ -22,12 +22,12 @@
 	<div th:fragment="navFragment" class="nav-area">
     	<nav class="nav-default">
 			<ul class="list-area">
-				<li><a href="/board/articles-list.do?categoryNum=3" th:classappend="${#httpServletRequest.requestURI.startsWith('')} ? 'active' : ''">게시판 관리</a></li>
-				<li><a href="/category/categories-list.do" th:classappend="${#httpServletRequest.requestURI.startsWith('')} ? 'active' : ''">카테고리 관리</a></li>
+				<li><a href="/board/articles-list.do?categoryNum=3" th:classappend="${#httpServletRequest.requestURI.startsWith('/board/articles-list.do')} ? 'active' : ''" th:if="${#authorization.expression('hasRole(''ROLE_PRIVACY_ADMIN'')')}">게시판 관리</a></li>
+				<li><a href="/category/categories-list.do" th:classappend="${#httpServletRequest.requestURI.startsWith('/category/categories-list.do')} ? 'active' : ''" th:if="${#authorization.expression('hasRole(''ROLE_PRIVACY_ADMIN'')')}">카테고리 관리</a></li>
 				<li><a href="/privacy-admin/user-management/main.do" th:classappend="${#httpServletRequest.requestURI.startsWith('/privacy-admin/user-management/')} ? 'active' : ''" th:if="${#authorization.expression('hasRole(''ROLE_PRIVACY_ADMIN'')')}">회원 관리</a></li>
 				<li><a href="/privacy-admin/pet-management/admin-pet-list.do" th:classappend="${#httpServletRequest.requestURI.startsWith('/privacy-admin/pet-management/')} ? 'active' : ''" th:if="${#authorization.expression('hasRole(''ROLE_PRIVACY_ADMIN'')')}">반려친구 관리</a></li>
-                <li><a href="/event/adminlistEvents.do" th:classappend="${#httpServletRequest.requestURI.startsWith('/event/adminlistEvents.do')} ? 'active' : ''" th:if="${#authorization.expression('hasRole(''ROLE_PRIVACY_ADMIN'')')}">일정 관리</a></li>
-            </ul>
+				<li><a href="/event/adminlistEvents.do" th:classappend="${#httpServletRequest.requestURI.startsWith('/event/adminlistEvents.do')} ? 'active' : ''" th:if="${#authorization.expression('hasRole(''ROLE_PRIVACY_ADMIN'')')}">일정 관리</a></li>
+			</ul>			
 			<div> 
 				<!-- 허전해서 뭘 채울지 고민 --> 
 			</div>
