--- a/src/main/resources/templates/sidebar/category.html
+++ b/src/main/resources/templates/sidebar/category.html
@@ -7,11 +7,11 @@
     <!--mypage-sidebar-->
     <div th:fragment="categorySidebar" class="sidebar">
         <ul class="sidebar-menu">
-            <a class="menu-title" href="/category/categories-list.do">카테고리 관리</a>
+            <a class="menu-title" href="">카테고리 관리</a>
             <li><a href="/category/categories-list.do">카테고리 관리</a></li>
         </ul>
         <div class="contact-us">
-            <a href="/board/listArticles.do?categoryNum=7">고객문의</a>
+            <a href="/board/listArticles.do?categoryNum=7">고객문의함</a>
         </div>
     </div>
 </body>
