게시판 게시글 수정부분 복구

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -85,7 +85,7 @@
             <div class="board" id="free-board">
                 <div class="title-area"><img th:src="@{/img/main/corkboard.png}" class="title-icon"><h2 class="board-title">자유 게시판</h2></div>
                 <ul class="board-list">
-                    <li><a href="#" style="font-size: 20px; font-style: italic; color: #69D1C6;">시간 부족으로 인한 자유 게시판 미구현 ㅠㅡㅠ</a></li>
+                    <li><a href="#" style="font-size: 20px; font-style: italic; color: #69D1C6;">준비중입니다.</a></li>
                 </ul>
             </div>
         </div>
